curso1/modulo5/ejemplos/mysql-deployment-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql2
  labels:
    app: mysql
    type: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql2
  template:
    metadata:
      labels:
        app: mysql2
        type: database
    spec:
      containers:
        - name: contenedor-mysql
          image: registry.redhat.io/rhscl/mysql-57-rhel7
          ports:
            - containerPort: 3306
              name: db-port
