curso1/modulo5/ejemplos/mysql-deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    type: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
        type: database
    spec:
      containers:
        - name: contenedor-mysql
          image:  quay.io/centos7/mysql-80-centos7
          ports:
            - containerPort: 3306
              name: db-port
