curso1/modulo5/ejemplos/mysql-deployment-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql3
  labels:
    app: mysql3
    type: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql3
  template:
    metadata:
      labels:
        app: mysql3
        type: database
    spec:
      containers:
        - name: contenedor-mysql
          image:  registry.redhat.io/rhscl/mysql-57-rhel7
          ports:
            - containerPort: 3306
              name: db-port
